Comecei a escrever o conteúdo.

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Texto artigo 001 <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde enim quia animi ullam aspernatur numquam autem voluptates, dolorem consectetur, itaque sint nihil optio quaerat laudantium omnis asperiores suscipit cum similique.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto artigo 002</p>
+            <h2>Curso de Javascript</h2>
+            <p>Texto artigo 002 <br>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam atque alias similique vero praesentium. Sed consequuntur nam iste voluptates ut deserunt eligendi fugit harum, repellendus odit quia adipisci maiores fugiat.</p>
         </article>
     </main>
     
